psycopg and pyroute2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ docker = "^6.1.3"
 psycopg = "^3.1.14"
 pywebdav3 = "^0.10.0"
 python-magic = "^0.4.27"
+unshare = "^0.22"
+landlock = "^1.0.0.dev4"
 
 
 [build-system]
