--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Improved functionality for Docker for building advanced container
 authors = ["Paige Thompson <paige@paige.bio>"]
 license = "GPL"
 readme = "README.md"
-packages = [{ include = "netcrave_docker_certificatemgr", from = "src" },{ include = "netcrave_docker_dnsd", from = "src" }, { include = "netcrave_docker_haproxyctl", from = "src" }, { include = "netcrave_docker_icap", from = "src" }, { include = "netcrave_docker_ipam", from = "src" }, { include = "netcrave_docker_davfs", from = "src" }, { include = "netcrave_docker_acme", from = "src" }, { include = "netcrave_docker_zmq", from = "src" }]
+packages = [{ include = "netcrave_docker_certificatemgr", from = "src" },{ include = "netcrave_docker_dnsd", from = "src" }, { include = "netcrave_docker_haproxyctl", from = "src" }, { include = "netcrave_docker_icap", from = "src" }, { include = "netcrave_docker_ipam", from = "src" }, { include = "netcrave_docker_davfs", from = "src" }, { include = "netcrave_docker_acme", from = "src" }, { include = "netcrave_docker_util", from = "src" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
