--- a/etc/systemd/system/docker.service
+++ b/etc/systemd/system/docker.service
@@ -9,8 +9,12 @@ Requires=docker.socket _netcrave.service
 Type=notify
 ExecStartPre=-/usr/bin/env ip netns add docker
 ExecStartPre=/usr/bin/env ip netns exec docker ip link set lo up
-ExecStartPre=/usr/bin/env ip link add ns1ma0 type veth peer name ns0sl0
+ExecStartPre=/usr/bin/env ip link add ns1ma0 type veth peer name ns1sl0
 ExecStartPre=sudo ip link set 'ns1sl0' netns docker
+ExecStartPre=/usr/bin/env ip link add vrf-red type vrf table 20
+ExecStartPre=/usr/bin/env ip link set dev vrf-red up
+ExecStartPre=/usr/bin/env ip route add table 20 unreachable default metric 4278198272
+ExecStartPre=/usr/bin/env ip link set dev ns1ma1 master vrf-red
 ExecStartPre=/usr/bin/env mount --bind /proc/self/ns/net /run/netns/docker
 ExecStart=/opt/docker/dockerd --config-file=/etc/netcrave/docker.json
 ExecReload=/bin/kill -s HUP $MAINPID
