--- a/etc/systemd/system/_netcrave.service
+++ b/etc/systemd/system/_netcrave.service
@@ -10,11 +10,11 @@ Type=notify
 ExecStartPre=/usr/bin/env ip netns add _netcrave
 ExecStartPre=/usr/bin/env ip netns exec _netcrave ip link set lo up
 ExecStartPre=/usr/bin/env ip link add ns0ma0 type veth peer name ns0sl0
-ExecStartPre=sudo ip link set 'ns0sl0' netns _netcrave
-ExecStartPre=/usr/bin/env ip link add vrf-blue type vrf table 10
-ExecStartPre=/usr/bin/env ip link set dev vrf-blue up
-ExecStartPre=/usr/bin/env ip route add table 10 unreachable default metric 4278198272
-ExecStartPre=/usr/bin/env ip link set dev ns0ma0 master vrf-blue
+ExecStartPre=/usr/bin/env ip link set 'ns0ma0' netns _netcrave
+ExecStartPre=/usr/bin/env ip netns exec _netcrave ip link add vrf-blue type vrf table 10
+ExecStartPre=/usr/bin/env ip netns exec _netcrave ip link set dev vrf-blue up
+ExecStartPre=/usr/bin/env ip netns exec _netcrave ip route add table 10 unreachable default metric 4278198272
+ExecStartPre=/usr/bin/env ip netns exec _netcrave ip link set dev ns0ma0 master vrf-blue
 ExecStartPre=/usr/bin/env mount --bind /proc/self/ns/net /run/netns/_netcrave
 ExecStart=/opt/docker/dockerd --config-file=/etc/netcrave/_netcrave.json
 ExecReload=/bin/kill -s HUP $MAINPID
