--- a/etc/systemd/system/docker.service
+++ b/etc/systemd/system/docker.service
@@ -7,14 +7,26 @@ Requires=docker.socket _netcrave.service
 
 [Service]
 Type=notify
-ExecStartPre=-/usr/bin/env ip netns add docker
+ExecStartPre=/usr/bin/env ip netns add docker
 ExecStartPre=/usr/bin/env ip netns exec docker ip link set lo up
 ExecStartPre=/usr/bin/env ip link add ns1ma0 type veth peer name ns1sl0
-ExecStartPre=sudo ip link set 'ns1sl0' netns docker
-ExecStartPre=/usr/bin/env ip link add vrf-red type vrf table 20
-ExecStartPre=/usr/bin/env ip link set dev vrf-red up
-ExecStartPre=/usr/bin/env ip route add table 20 unreachable default metric 4278198272
-ExecStartPre=/usr/bin/env ip link set dev ns1ma1 master vrf-red
+ExecStartPre=/usr/bin/env ip link set 'ns1sl0' netns docker
+ExecStartPre=/usr/bin/env ip link set 'ns0sl0' netns docker
+ExecStartPre=/usr/bin/env ip link set 'ns1ma0' netns _netcrave
+ExecStartPre=/usr/bin/env ip netns exec docker ip link add vrf-blue type vrf table 10
+ExecStartPre=/usr/bin/env ip netns exec docker ip link add vrf-red type vrf table 20
+ExecStartPre=/usr/bin/env ip netns exec _netcrave ip link add vrf-red type vrf table 20
+ExecStartPre=/usr/bin/env ip netns exec docker ip link set dev ns0sl0 master vrf-blue
+ExecStartPre=/usr/bin/env ip netns exec docker ip link set dev ns1sl0 master vrf-red
+ExecStartPre=/usr/bin/env ip netns exec _netcrave ip link set dev ns1ma0 master vrf-red
+ExecStartPre=/usr/bin/env ip netns exec docker ip link set dev vrf-red up
+ExecStartPre=/usr/bin/env ip netns exec _netcrave ip link set dev vrf-red up
+ExecStartPre=/usr/bin/env ip netns exec docker ip route add table 20 unreachable default metric 4278198272
+ExecStartPre=/usr/bin/env ip netns exec _netcrave ip route add table 20 unreachable default metric 4278198272
+ExecStartPre=/usr/bin/env ip netns exec docker ip link set up dev ns1sl0
+ExecStartPre=/usr/bin/env ip netns exec docker ip link set up dev ns0sl0
+ExecStartPre=/usr/bin/env ip netns exec _netcrave ip link set up dev ns0ma0
+ExecStartPre=/usr/bin/env ip netns exec _netcrave ip link set up dev ns1ma0
 ExecStartPre=/usr/bin/env mount --bind /proc/self/ns/net /run/netns/docker
 ExecStart=/opt/docker/dockerd --config-file=/etc/netcrave/docker.json
 ExecReload=/bin/kill -s HUP $MAINPID
