--- a/dotenv.example
+++ b/dotenv.example
@@ -1,2 +1,64 @@
 DEBIAN_RELEASE=bookworm
-DB_CONNECT_STRING="postgresql://root@localhost:26257/defaultdb?sslcert=/certs/client.root.crt&sslkey=/certs/client.root.key&sslmode=verify-full&sslrootcert=/certs/ca.crt"
+
+NUM_BACKENDS_SSL=64
+NUM_BACKENDS=64
+
+IPAM_IP4=192.0.0.2
+IPAM_IP6=2001:db8:aaaa:aaaa:192:0:0:2
+IPAM_NET_4=192.0.0.0/30
+IPAM_NET_6=2001:db8:aaaa:aaaa::/64
+
+IFCONFIG_IP4=192.0.0.6
+IFCONFIG_IP6=2001:db8:aaaa:aaab:192:0:0:6
+IFCONFIG_NET_4=192.0.0.4/30
+IFCONFIG_NET_6=2001:db8:aaaa:aaab::/64
+
+ICAP_IP4=192.0.0.22
+ICAP_IP6=2001:db8:aaaa:aaaf:192:0:0:22
+ICAP_NET_4=192.0.0.20/30
+ICAP_NET_6=2001:db8:aaaa:aaaf::/64
+
+HAPROXYCFG_IP4=192.0.0.10
+HAPROXYCFG_IP6=2001:db8:aaaa:aaac:192:0:0:10
+HAPROXYCFG_NET_4=192.0.0.8/30
+HAPROXYCFG_NET_6=2001:db8:aaaa:aaac::/64
+
+HAPROXY_IP4=192.0.0.26
+HAPROXY_IP6=2001:db8:aaaa:aaba:192:0:0:26
+HAPROXY_NET_4=192.0.0.24/30
+HAPROXY_NET_6=2001:db8:aaaa:aaba::/64
+
+FLUENTD_IP4=192.0.0.38
+FLUENTD_IP6=2001:db8:aaaa:aabd:192:0:0:38
+FLUENTD_NET_4=192.0.0.36/30
+FLUENTD_NET_6=2001:db8:aaaa:aabd::/64
+
+DNSD_IP4=192.0.0.18
+DNSD_IP6=2001:db8:aaaa:aaae:192:0:0:18
+DNSD_NET_4=192.0.0.16/30
+DNSD_NET_6=2001:db8:aaaa:aaae::/64
+
+DAVFS_IP4=192.0.0.42
+DAVFS_IP6=2001:db8:aaaa:aabe:192:0:0:42
+DAVFS_NET_4=192.0.0.40/30
+DAVFS_NET_6=2001:db8:aaaa:aabe::/64
+
+COCKROACH_IP4=192.0.0.34
+COCKROACH_IP6=2001:db8:aaaa:aabc:192:0:0:34
+COCKROACH_NET_4=192.0.0.32/30
+COCKROACH_NET_6=2001:db8:aaaa:aabc::/64
+
+CERTIFICATEMGR_IP4=192.0.0.14
+CERTIFICATEMGR_IP6=2001:db8:aaaa:aaad:192:0:0:14
+CERTIFICATEMGR_NET_4=192.0.0.12/30
+CERTIFICATEMGR_NET_6=2001:db8:aaaa:aaad::/64
+
+ACME_IP4=192.0.0.46
+ACME_IP6=2001:db8:aaaa:aabf:192:0:0:46
+ACME_NET_4=192.0.0.44/30
+ACME_NET_6=2001:db8:aaaa:aabf::/64
+
+SQUID_IP4=192.0.0.30
+SQUID_IP6=2001:db8:aaaa:aabb:192:0:0:30
+SQUID_NET_4=192.0.0.28/30
+SQUID_NET_6=2001:db8:aaaa:aabb::/64
