--- a/docker/haproxy/Dockerfile
+++ b/docker/haproxy/Dockerfile
@@ -12,6 +12,8 @@ RUN apt --option Dpkg::Options::="--force-confold" --no-install-recommends -y in
 
 RUN rm -rf /opt/conf
 
+RUN mkdir /ctl_socket
+
 ARG ADMIN_SOCKET_ADDR
 
-CMD haproxy -W -S $ADMIN_SOCKET_ADDR -f /etc/haproxy/haproxy.cfg
+CMD haproxy -W -S /ctl_socket/sock -f /etc/haproxy/haproxy.cfg
